# phany

./: .gitmodules  CMakeLists.txt
include/phany/: phany.hpp
src/: CMakeLists.txt  phany.cpp
tests/: CMakeLists.txt  test.cpp  test_phany.cpp  testlib.cpp
tests/include/: test.hpp
